--- a/Noticias.html
+++ b/Noticias.html
@@ -40,7 +40,7 @@
             <br/>
             <div class="artigos">
                 <article>
-                    <img src="C:\Users\Pichau\Documents\Estudos\Trabalho de HTML\css\css\imagens\futebol.jpg" alt="Bola de futebol no gramado" />
+                    <img src=".\futebol.jpg" alt="Bola de futebol no gramado" />
                     <header>
                         <time>13/07/2022 às 12:35</time>
                     </header>
@@ -51,7 +51,7 @@
                     <a href="#" title="Leia a notícia completa">Ler mais</a>
                 </article>
                 <article>
-                    <img src="C:\Users\Pichau\Documents\Estudos\Trabalho de HTML\css\css\imagens\futebol-americano.jpg" alt="Jogador de futebol americano correndo com a bola na mão" />
+                    <img src=".\futebol-americano.jpg" alt="Jogador de futebol americano correndo com a bola na mão" />
                     <header>
                         <time>13/07/2022 às 12:35</time>
                     </header>
@@ -62,7 +62,7 @@
                     <a href="#" title="Leia a notícia completa">Ler mais</a>
                 </article>
                 <article>
-                    <img src="C:\Users\Pichau\Documents\Estudos\Trabalho de HTML\css\css\imagens\basquete.jpg" title="Vista aérea de uma quadra de basquete" />
+                    <img src=".\basquete.jpg" title="Vista aérea de uma quadra de basquete" />
                     <header>
                         <time>13/07/2022 às 12:35</time>
                     </header>
@@ -84,7 +84,7 @@
         <br/>
         <div class="artigos">
             <article>
-                <img src="C:\Users\Pichau\Documents\Estudos\Trabalho de HTML\css\css\imagens\dolares.jpg" alt="Muitos dólares" />
+                <img src=".\dolares.jpg" alt="Muitos dólares" />
                 <header>
                     <time>13/07/2022 às 12:35</time>
                 </header>
@@ -95,7 +95,7 @@
                 <a href="#" title="Leia a notícia completa">Ler mais</a>
             </article>
             <article>
-                <img src="C:\Users\Pichau\Documents\Estudos\Trabalho de HTML\css\css\imagens\euro.jpg" alt="Várias notas de euro" />
+                <img src=".\euro.jpg" alt="Várias notas de euro" />
                 <header>
                     <time>13/07/2022 às 12:35</time>
                 </header>
@@ -106,7 +106,7 @@
                 <a href="#" title="Leia a notícia completa">Ler mais</a>
             </article>
             <article>
-                <img src="C:\Users\Pichau\Documents\Estudos\Trabalho de HTML\css\css\imagens\petroleo.jpg" alt="Extração de petróleo" />
+                <img src=".\petroleo.jpg" alt="Extração de petróleo" />
                 <header>
                     <time>13/07/2022 às 12:35</time>
                 </header>
@@ -128,7 +128,7 @@
          <br/>
          <div class="artigos">
              <article>
-                 <img src="C:\Users\Pichau\Documents\Estudos\Trabalho de HTML\css\css\imagens\hero.jpg" alt="Capa de My Hero Academia" />
+                 <img src=".\hero.jpg" alt="Capa de My Hero Academia" />
                  <header>
                      <time>24/09/2023 às 12:35</time>
                  </header>
@@ -139,7 +139,7 @@
                  <a href="#" title="Leia a notícia completa">Ler mais</a>
              </article>
              <article>
-                 <img src="C:\Users\Pichau\Documents\Estudos\Trabalho de HTML\css\css\imagens\kimetsu.jpg" alt="Capa de Demon Slayer" />
+                 <img src=".\kimetsu.jpg" alt="Capa de Demon Slayer" />
                  <header>
                      <time>14/06/2022 às 03:33</time>
                  </header>
@@ -150,7 +150,7 @@
                  <a href="#" title="Leia a notícia completa">Ler mais</a>
              </article>
              <article>
-                 <img src="C:\Users\Pichau\Documents\Estudos\Trabalho de HTML\css\css\imagens\jujutsu.jpg" alt="Capa de Jujutsu Kaisen" />
+                 <img src=".\jujutsu.jpg" alt="Capa de Jujutsu Kaisen" />
                  <header>
                      <time>13/07/2022 às 12:35</time>
                  </header>
@@ -172,7 +172,7 @@
          <br/>
          <div class="artigos">
              <article>
-                 <img src="C:\Users\Pichau\Documents\Estudos\Trabalho de HTML\css\css\imagens\valorant.jpeg" alt="Capa de Valorant" />
+                 <img src=".\valorant.jpeg" alt="Capa de Valorant" />
                  <header>
                      <time>13/07/2022 às 12:35</time>
                  </header>
@@ -183,7 +183,7 @@
                  <a href="#" title="Leia a notícia completa">Ler mais</a>
              </article>
              <article>
-                 <img src="C:\Users\Pichau\Documents\Estudos\Trabalho de HTML\css\css\imagens\mhur.jpg" alt="Capa de My Hero Ultra Rumble" />
+                 <img src=".\mhur.jpg" alt="Capa de My Hero Ultra Rumble" />
                  <header>
                      <time>13/07/2022 às 12:35</time>
                  </header>
@@ -194,7 +194,7 @@
                  <a href="#" title="Leia a notícia completa">Ler mais</a>
              </article>
              <article>
-                 <img src="C:\Users\Pichau\Documents\Estudos\Trabalho de HTML\css\css\imagens\cs.jpg" alt="Capa de Counter Strike 2" />
+                 <img src=".\cs.jpg" alt="Capa de Counter Strike 2" />
                  <header>
                      <time>13/07/2022 às 12:35</time>
                  </header>
